@@ -1,3 +1,4 @@
 --add-opens java.base/java.lang=ALL-UNNAMED
+--add-opens java.base/java.util=ALL-UNNAMED
 --add-opens jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED
 --add-opens jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
